--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -29,6 +29,7 @@ modules:
       - gnome-themes-extra
       - gtk-murrine-engine
       - arc-theme
+      - fuse-sshfs
     remove:
       # example: removing firefox (in favor of the flatpak)
       # "firefox" is the main package, "firefox-langpacks" is a dependency
