--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -30,6 +30,7 @@ modules:
       - gtk-murrine-engine
       - arc-theme
       - fuse-sshfs
+      - kde-connect
     remove:
       # example: removing firefox (in favor of the flatpak)
       # "firefox" is the main package, "firefox-langpacks" is a dependency
